# graph-rlm

./: .env.example  .gitignore  LICENSE  README.md  mcp_servers_example.json  project_structure.txt  pyproject.toml  setup_env.sh  start.sh
CODEAGENCY/: diagnosis.md  evaluation.md  plan.md  trace_analysis.md
docs/: 10 Advanced Feature Engineering Methods.md  5 Useful Python Scripts for Effective Feature Engineering.md  A Succinct Guide To Bidirectional Associative Memory (BAM).md  Bootstrapping-Core-Self-via-AI-Feedback.md  Designing-a-Self-Healing-RLM-Framework.md  Enhancing-LLM-Critical-Thinking-and-Reasoning.md  Integrating-RLM-and-Ralph-Wiggum-Loop.md  Representation-Engineering-for-LLMs.md  The Developer's Guide to Human-Centered AI Interfaces with Material UI.md  googlelangextract A Python library for extracting structured information from unstructured text using LLMs with precise source grounding and interactive visualization..md
graph_rlm/: __init__.py
graph_rlm/backend/: main.py  rules.md
graph_rlm/backend/mcp_tools/: README.md  __init__.py  advanced_reasoning.py  arxiv_mcp_server.py  ast_mcp_server.py  brave_search.py  chatdag.py  coinbase_trade_assistant.py  (+22 more)
graph_rlm/frontend/: package-lock.json  package.json
knowledge_base/research-reports/: 2410.06277.txt  arxiv_2103.00079_llm_ad_quantization_report.md  graph_rlm_framework_report.md  graph_rlm_implementation_audit.md  toe-report.md
plan/: implementation_plan.md
scripts/: generate_structure.py
tests/: debug_paper_read.py  inspect_db.py  test_import.py  test_skills.py  verify_stateless.py
(+116 files in other folders)
