[project]
name = "graph-rlm"
version = "0.1.0"
description = "Self-Healing Recursive Language Model with Graph Memory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "falkordb>=1.4.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "openrouter>=0.1.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "termcolor>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
